--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,8 +7,8 @@ spring:          #表示该配置直接为Spring容器负责处理
   datasource:
     type: com.alibaba.druid.pool.DruidDataSource   #配置当前要使用的数据源的操作类型那个
     driver-class-name: com.mysql.jdbc.Driver       #配置MySQL的驱动程序类
-    url: jdbc:mysql://localhost:3306/test?useUnicode=true&characterEncoding=UTF-8&autoReconnect=true&failOverReadOnly=false
-    username: root
+    url: jdbc:mysql://47.101.150.254:3306/hugui?useUnicode=true&characterEncoding=UTF-8&autoReconnect=true&failOverReadOnly=false
+    username: hugui
     password: 123456
 #    filters: stat,wall,log4j     #druid监控配置
     dbcp2:
@@ -19,9 +19,4 @@ spring:          #表示该配置直接为Spring容器负责处理
 swagger2:
   enable: true
 
-#tk.mybatis配置信息
-mapper:
-  not-empty: false
-  identity: MYSQL
-  resolve-class: com.hug.it.ShibaInu.common.MyEntityResolve
 
