--- a/pom.xml
+++ b/pom.xml
@@ -90,6 +90,12 @@
             <artifactId>guava</artifactId>
             <version>20.0</version>
         </dependency>
+        <!-- http://repo1.maven.org/maven2/com/xuxueli/xxl-job-core/ -->
+        <dependency>
+            <groupId>com.xuxueli</groupId>
+            <artifactId>xxl-job-core</artifactId>
+            <version>2.0.2</version>
+        </dependency>
     </dependencies>
 
     <repositories>
